testing Oliver's body overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@ html {
   scroll-behavior: smooth;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 /* VARIABLES */
 
 :root {
@@ -40,6 +46,7 @@ body {
   margin: 0;
   height: 100vh;
   width: 100vw;
+  box-sizing: border-box;
 }
 
 header {
